# cpp-cross-platform-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: main.cpp
